# kalman-filter-rs

./: Cargo.toml  README.md
src/: kalman.rs  kalman_classic.rs  kalman_extended.rs  lib.rs
tests/: unit_tests.rs
