[package]
name = "kalman_filter"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { version = ">0.30" , default-features = false , features = ['libm','macros']}
assert_approx_eq = "1.1.0"

[dev-dependencies]
rand = "0.8"